2011-01-06  Joone Hur  <joone.hur@collabora.co.uk>

        Reviewed by Eric Seidel.

        WML Parser should treat line/column number in a consistent way
        https://bugs.webkit.org/show_bug.cgi?id=51601

        Add the equality operators to TextPosition class.

        * wtf/text/TextPosition.h:
        (WTF::TextPosition::operator==): Added.
        (WTF::TextPosition::operator!=): Added.
        (WTF::TextPosition::belowRangePosition): Use belowBase() instead of base().
        (WTF::ZeroBasedNumber::operator==): Added.
        (WTF::ZeroBasedNumber::operator!=): Added.
        (WTF::OneBasedNumber::operator==): Added.
        (WTF::OneBasedNumber::operator!=): Added.

2011-01-06  Patrick Gansterer  <paroga@webkit.org>

        Reviewed by Gavin Barraclough.

        [WINCE] Determine stack extent
        https://bugs.webkit.org/show_bug.cgi?id=26276

        Scan the stack for writeable pages and use the limits.

        * wtf/StackBounds.cpp:
        (WTF::detectGrowingDownward):
        (WTF::isPageWritable):
        (WTF::getLowerStackBound):
        (WTF::getUpperStackBound):
        (WTF::StackBounds::initialize):

2011-01-05  Steve Falkenburg  <sfalken@apple.com>

        Windows build fix.

        * JavaScriptCore.vcproj/JavaScriptCore/JavaScriptCoreCommon.vsprops: Revert change to additional library search path needed to find ICU.

2011-01-05  Steve Falkenburg  <sfalken@apple.com>

        Reviewed by Darin Adler.

        Debug and Release builds on Windows clobber each other
        https://bugs.webkit.org/show_bug.cgi?id=49185
        
        Changes the structure of WebKitBuild build products directory so we
        completely separate each build configuration into independent directories.
        
        Although we previously had per-configuration directories for obj, this change adds
        per-configuration directories for bin, lib, obj, and include. Each configuration's